# doujinshi-records

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml
docs/: DESIGN.md  troubleshooting-src-tauri-files-deleted.md  数据与文件状态机逻辑分析.md
docs/archive/: v3-manual-e2e.md
docs/superpowers/: perf-results.md
scripts/: screenshot.mjs  wipe_data.py
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  dirty.rs  guards.rs  inbox.rs  library.rs  mod.rs  recycle.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  recovery.rs
src-tauri/src/db/entities/: app_setting.rs  conflict.rs  dirty_data.rs  doujinshi_file.rs  filename_alias.rs  mod.rs  scan_event.rs
src-tauri/src/http/: api.rs  auth.rs  auth_token.rs  mod.rs  placeholder.rs  port_allocator.rs
src-tauri/src/models/: file_summary.rs  mod.rs
src-tauri/src/services/: archive.rs  backup.rs  cover.rs  cover_format.rs  dirty_scanner.rs  disk_space.rs  filename_parser.rs  hasher.rs  identifier.rs  mod.rs  preview_cache.rs  rar_detect.rs  scanner.rs  state_machine.rs
src-tauri/src/services/backup/: mod.rs  service.rs  storage.rs
src-tauri/tests/: backup_service.rs  conflict_dedup.rs  dirty_reingest.rs  http_bind.rs  http_routes.rs  inbox_resolve.rs  migrate_v3.rs  migrate_v7.rs  migrations.rs  open_path.rs  perf.rs
src-tauri/tests/common/: mod.rs
(+66 files in other folders)
